--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,15 @@
         android:theme="@style/Theme.PNLib_PH35035"
         tools:targetApi="31">
         <activity
+            android:name=".wellcomeSecree2"
+            android:exported="false" />
+        <activity
+            android:name=".SearchActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SearchActivity"
+            android:exported="false" />
+        <activity
             android:name=".CreateBill"
             android:exported="false" />
         <activity
